[tool.poetry]
name = "projeto-pandas"
version = "0.1.0"
description = ""
authors = ["robsonavr <robsonavr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
openpyxl = "^3.1.5"
undetected-chromedriver = "^3.5.5"
a-selenium2df = "^0.10"
prettycolorprinter = "^0.45"
ipython = "^8.26.0"
setuptools = "^70.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
